--- a/css/theme.css
+++ b/css/theme.css
@@ -213,7 +213,6 @@ section.dark {
 }
 .download-container section.white {
     padding: 30px 0;
-    min-height: 350px;
 }
 .install-info {
     width: 70%;
